--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
+    "lodash": "^4.17.15",
     "mixpanel-browser": "^2.37.0",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.155",
     "@types/mixpanel-browser": "^2.35.3",
     "@types/ramda": "^0.27.6",
     "@types/react-redux": "^7.1.9",
