--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/ramda": "^0.27.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.3",
     "react-hot-loader": "^4.12.21",
     "utility-types": "^3.10.0"
   }
