--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
