feat(containers): adds IdeaContainer

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "lodash": "^4.17.15",
     "mixpanel-browser": "^2.37.0",
     "ramda": "^0.27.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^0.0.0-experimental-33c3af284",
+    "react-dom": "^0.0.0-experimental-33c3af284",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reactfire": "^2.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.155",
     "@types/mixpanel-browser": "^2.35.3",
+    "@types/qs": "^6.9.3",
     "@types/ramda": "^0.27.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
