--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "mixpanel-browser": "^2.37.0",
     "ramda": "^0.27.0",
     "react": "^0.0.0-experimental-33c3af284",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^0.0.0-experimental-33c3af284",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-share": "^4.2.0",
     "reactfire": "^2.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -62,6 +64,7 @@
     "@types/qs": "^6.9.3",
     "@types/ramda": "^0.27.6",
     "@types/react": "^16.9.38",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
