--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "clsx": "^1.1.1",
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
     "lodash": "^4.17.15",
