--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.1.1",
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "mixpanel-browser": "^2.37.0",
     "ramda": "^0.27.0",
@@ -27,10 +28,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.0",
+    "react-virtualized": "^9.21.2",
     "reactfire": "^2.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rxfire": "^3.13.0",
     "rxjs": "^6.5.5",
