feat(containers): implements InfiniteLoader

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "clsx": "^1.1.1",
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
+    "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "mixpanel-browser": "^2.37.0",
+    "qs": "^6.9.4",
     "ramda": "^0.27.0",
     "react": "^0.0.0-experimental-33c3af284",
     "react-copy-to-clipboard": "^5.0.2",
@@ -74,6 +76,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-virtualized": "^9.21.10",
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.29.3",
