feat(package): updates react and react dom to 16.13.1

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "mixpanel-browser": "^2.37.0",
     "qs": "^6.9.4",
     "ramda": "^0.27.0",
-    "react": "^0.0.0-experimental-33c3af284",
+    "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^0.0.0-experimental-33c3af284",
+    "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
     "react-redux": "^7.2.0",
@@ -71,7 +71,7 @@
     "@types/mixpanel-browser": "^2.35.3",
     "@types/qs": "^6.9.3",
     "@types/ramda": "^0.27.6",
-    "@types/react": "^16.9.38",
+    "@types/react": "^16.9.41",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
