--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "ahooks": "^2.0.1",
     "clsx": "^1.1.1",
+    "draft-js": "^0.11.6",
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
     "history": "^5.0.0",
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.41",
     "@types/lodash": "^4.14.155",
     "@types/mixpanel-browser": "^2.35.3",
     "@types/qs": "^6.9.3",
