--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "react-scripts": "3.4.1",
     "react-share": "^4.2.0",
     "react-virtualized": "^9.21.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "reactfire": "^2.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -79,6 +82,9 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized": "^9.21.10",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
+    "@types/react-window-infinite-loader": "^1.0.3",
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.29.3",
