--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@firebase/testing": "^0.20.6",
     "@types/draft-js": "^0.10.41",
     "@types/lodash": "^4.14.155",
     "@types/mixpanel-browser": "^2.35.3",
