--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": "src",
-    "types": ["react/experimental"]
+    "types": ["react/experimental", "jest"]
   },
   "include": ["src"]
 }
