feat: installs logrocket

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
+    "logrocket": "^1.0.9",
+    "logrocket-react": "^4.0.1",
     "mixpanel-browser": "^2.37.0",
     "qs": "^6.9.4",
     "ramda": "^0.27.0",
@@ -74,6 +76,7 @@
     "@firebase/testing": "^0.20.6",
     "@types/draft-js": "^0.10.41",
     "@types/lodash": "^4.14.155",
+    "@types/logrocket-react": "^3.0.0",
     "@types/mixpanel-browser": "^2.35.3",
     "@types/qs": "^6.9.3",
     "@types/ramda": "^0.27.6",
