--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
