--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#3f51b5"
+  "theme_color": "#3f51b5",
+  "background_color": "#ffffff"
 }
