--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.1.4",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
+    "json2csv": "^5.0.1",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.9",
     "logrocket-react": "^4.0.1",
@@ -77,6 +78,7 @@
   "devDependencies": {
     "@firebase/testing": "^0.20.6",
     "@types/draft-js": "^0.10.41",
+    "@types/json2csv": "^5.0.1",
     "@types/lodash": "^4.14.155",
     "@types/logrocket-react": "^3.0.0",
     "@types/mixpanel-browser": "^2.35.3",
