--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#3f51b5",
-  "background_color": "#ffffff"
+  "background_color": "#e0f2f1"
 }
