--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
     "react-flip-move": "^3.0.4",
+    "react-joyride": "^2.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
