--- a/firebase.json
+++ b/firebase.json
@@ -39,5 +39,11 @@
     "ui": {
       "enabled": true
     }
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   }
 }
