--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postinstall": "yarn --cwd functions install --ignore-engines",
     "predeploy": "yarn build",
     "deploy": "firebase deploy",
+    "preanalyze": "yarn build",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
