--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "^7.15.0",
     "formik": "^2.1.4",
     "history": "^5.0.0",
-    "json2csv": "^5.0.1",
+    "jsonexport": "^3.0.1",
     "lodash": "^4.17.19",
     "logrocket": "^1.0.9",
     "logrocket-react": "^4.0.1",
