--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "devDependencies": {
     "@firebase/testing": "^0.20.6",
     "@types/draft-js": "^0.10.41",
+    "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.8",
     "@types/json2csv": "^5.0.1",
     "@types/lodash": "^4.14.155",
@@ -93,6 +94,7 @@
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.29.3",
+    "fs-extra": "^9.0.1",
     "react-hot-loader": "^4.12.21",
     "utility-types": "^3.10.0"
   }
