--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.29.3",
     "fs-extra": "^9.0.1",
+    "madge": "^3.9.2",
     "react-hot-loader": "^4.12.21",
     "utility-types": "^3.10.0"
   }
