--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dropzone": "^11.0.1",
     "react-flip-move": "^3.0.4",
     "react-joyride": "^2.2.1",
+    "react-loadable": "^5.5.0",
     "react-query": "^2.5.10",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -88,11 +89,13 @@
     "@types/react": "^16.9.41",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized": "^9.21.10",
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.0.0",
+    "@types/webpack-env": "^1.15.2",
     "@types/yup": "^0.29.3",
     "fs-extra": "^9.0.1",
     "madge": "^3.9.2",
