--- a/functions/package.json
+++ b/functions/package.json
@@ -15,11 +15,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.11.0",
+    "fs-extra": "^9.0.1",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.21",
     "@types/node-fetch": "^2.5.7",
     "firebase-functions-test": "^0.2.0",
     "tslint": "^5.12.0",
