--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.1",
+    "react-error-boundary": "^2.3.1",
     "react-flip-move": "^3.0.4",
     "react-joyride": "^2.2.1",
     "react-loadable": "^5.5.0",
