feat(vscode): adds new words to dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
     "Beenhere",
     "Figma",
     "Millis",
+    "copyfiles",
     "esnext",
     "firebasestorage",
     "jsonexport",
     "onloadmetadata",
+    "postbuild",
     "preanalyze",
     "reactfire",
     "urljoin"
