feat(firebase.json): adds overite

--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,12 @@
   },
   "hosting": {
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
+      {
+        "source": "/ideas/*",
+        "function": "renderIdea"
+      },
       {
         "source": "**",
         "destination": "/index.html"
