--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "10"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "^8.10.0",
