fix(functions/getSitemap): replaces onCall with onRequest

--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "/sitemap.txt",
-        "function": "sitemap"
+        "function": "getSitemap"
       },
       {
         "source": "**",
